removed horizontal scroll and fixed placeholder bug

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@
 
 .main-root {
   flex: 1 0 auto;
-  width: 100vw;
+  width: 100%;
   min-height: 500px;
   display: flex;
   flex-direction: column;
