--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -66,6 +66,6 @@ a {
   @include flex-col();
   @include justify-align(flex-start, center);
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   color: $text-primary;
 }
